@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-30T08:15:56Z",
-  "count_outdated" : 0,
-  "uniques_outdated" : 0,
-  "count" : 8,
-  "uniques" : 7,
+  "timestamp" : "2022-04-30T16:17:21Z",
+  "count_outdated" : 13,
+  "uniques_outdated" : 7,
+  "count" : 17,
+  "uniques" : 11,
   "clones" : [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 13 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 7 ]
-    },
     {
       "timestamp": "2022-04-17T00:00:00Z",
       "count": 1,
