@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 5,
+  "count": 4,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-04-17T00:00:00Z",
       "count": 1,
