@@ -1,3 +1,9 @@
+2022-04-30T16:17:21Z:
+* notice: last 14d: all unq: 4 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 8 7
+* notice: next accum: outdated-all outdated-unq / all unq: 13 7 / 17 11
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -4 -9
+
 2022-04-30T08:15:56Z:
 * notice: last 14d: all unq: 8 5
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 17 11
